<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="img_club_football" type="id" />
    <item name="txt_name_club_football" type="id" />
    <item name="btn_fav_club_football" type="id" />
    <item name="txt_desc_club_football" type="id" />
    <item name="btn_det_1" type="id" />
    <item name="spinner" type="id" />
    <item name="team_badge" type="id" />
    <item name="team_name" type="id" />
    <item name="rv_list_team" type="id" />
    <item name="progress_load_team" type="id" />
    <item name="toolbar_home" type="id" />
    <item name="img_exception_search_team" type="id" />
    <item name="team_desc" type="id" />
    <item name="option_search_home" type="id" />
    <item name="img_event_team_detail" type="id" />
</resources>