...
        android:textSize="8sp"
        android:textAllCaps="false"
        android:textColor="@color/colorWhiteText65"
        android:textStyle="bold|italic"
        app:icon="@drawable/ic_filter_1_black_24dp"
        app:iconSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_lbl_tag"
        app:layout_constraintStart_toEndOf="@+id/txt_lbl_tag_div"
        app:layout_constraintTop_toTopOf="@+id/btn_lbl_tag"
        app:layout_constraintVertical_bias="0.0"
        tools:text="English Premier League"
        tools:ignore="SmallSp" />

...
        app:layout_constraintStart_toEndOf="@+id/img_lbl_team_total"
        app:layout_constraintTop_toBottomOf="@+id/img_lbl_team_name"
        tools:ignore="SmallSp,UnusedAttribute" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_classification_match"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:keepScreenOn="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_lbl_team_name"
        tools:listitem="@layout/item_classification_match" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_classification_back"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
...
