<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_previous"
        android:icon="@drawable/ic_skip_previous_black_24dp"
        android:title="@string/title_previous" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_next"
        android:icon="@drawable/ic_skip_next_black_24dp"
        android:title="@string/title_next" />

</menu>
